# src/main/kotlin/no/nav/syfo/altinntilganger/TilgangerApi.kt
@@ -5,6 +5,7 @@ import io.ktor.server.response.respond
 import io.ktor.server.routing.Route
 import io.ktor.server.routing.get
 import io.ktor.server.routing.route
+import no.nav.syfo.application.api.ErrorType
 import no.nav.syfo.application.auth.UserPrincipal
 import no.nav.syfo.application.exception.ApiErrorException
 import no.nav.syfo.narmesteleder.api.v1.getMyPrincipal
@@ -26,7 +27,8 @@ fun Route.registerTilgangerApi(
             val principal = call.getMyPrincipal()
             if (principal !is UserPrincipal) {
                 throw ApiErrorException.ForbiddenException(
-                    errorMessage = "Only user principals can access tilganger endpoint"
+                    errorMessage = "Only user principals can access tilganger endpoint",
+                    type = ErrorType.AUTHORIZATION_ERROR,
                 )
             }
             val organisasjoner = altinnTilgangerService.getFilteredOrganisasjoner(principal)
